--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,21 @@
-*{
+* {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  
 }
 
 .progress-wrapper {
   position: relative;
   width: 100%;
-  height: 8px; 
-  background-color: white; 
-  border-radius: 4px; 
+  height: 8px;
+  background-color: white;
+  border-radius: 4px;
 }
 
 .progress-bar {
   width: 100%;
   height: 100%;
-  background-color: #fff; 
+  background-color: #fff;
   border-radius: 4px; /* Rounded corners */
 }
 
@@ -25,13 +24,12 @@
   height: 100%;
   border-radius: 4px; /* Rounded corners */
 }
-.slick-prev:before, .slick-next:before{
-  font-family: 'slick';
-    font-size: 20px;
-    line-height: 1;
-    opacity: 1;
-    color: #adadad;
-    -webkit-font-smoothing: antialiased;
+.slick-prev:before,
+.slick-next:before {
+  font-family: "slick";
+  font-size: 20px;
+  line-height: 1;
+  opacity: 1;
+  color: #adadad !important;
+  -webkit-font-smoothing: antialiased;
 }
-
-
